# les_rag_public

./: .dockerignore  .gitignore  AGENTS.md  AIDER_TASKS.md  ARTICLE_INDEXING_LESSONS.md  ARTICLE_SAFERAG.md  CHANGELOG.md  CLAUDE.md  DICTIONARY_LES_v2.0.md  Dockerfile.proxy  INFRASTRUCTURE_v2.0.md  INSTALL.md  LES_MASTER_DOC_v2_1.md  LES_SIMPLE_OVERVIEW.md  LES_SYSTEM_BUSINESS_NOVEL.md  LICENSE  MLX_GUIDE.md  Makefile  PROGRAMMA_ISPYTANIY_v2.0.md  PROXY_ARCHITECTURE.md  RAG_MODERNIZATION_PLAN.md  README.md  README_v2.0.md  ROADMAP_LES_v2.0.md  ROADMAP_TO_V1.md  RUNTIME_MEMORY_PROFILES.md  SECURITY.md  SESSION_SUMMARY.md  SESSION_SUMMARY_11.md  SESSION_SUMMARY_4.md  SESSION_SUMMARY_5.md  SESSION_SUMMARY_6.md  SESSION_SUMMARY_8.md  SESSION_SUMMARY_9.md  SKILL.md  apply_v2.1_fix.py  article_rag_pipeline.html  docker-compose.yml  env.example  fix_rag.py  (+26 more)
backend/: auth.py  auth_login_route.py  converter.py  diagnostics.py  document_router.py  interface.py  login.html  mail_emlx.py  mail_ingest.py  mail_profile.py  mail_threads.py  metrics_collector.py  mlx_adapter.py  ocr_parser.py  olm_reader.py  parquet_writer.py  pdf_layout.py  pst_reader.py  qdrant_adapter.py  rag_config.py  reranker.py  rules_extractor.py  smart_index.py  trust_core.py
config/: kot_terms.yaml  service_sources.yaml
dev/: CAD_BIM_JSON_CONTRACT.md  DICTIONARY_LES_v2.0.md  INFRASTRUCTURE_v2.0.md  PROGRAMMA_ISPYTANIY_v2.0.md  README_v2.0.md  ROADMAP_LES_v2.0.md  TUNNELS_AND_REMOTE_ACCESS.md
docs/: ACCESSIBILITY_AUDIT.md  ADR-12-typed-retrieval.md  AGENT_NOTES.md  ALGO-asbuilt-intake.md  ALGO-context-memory.md  ALGO-external-radar.md  ALGO-fgis-price.md  ALGO-gesn.md  ALGO-harvest.md  ALGO-kac.md  ALGO-les-md.md  ALGO-lsr-assembly.md  ALGO-mail-intake.md  ALGO-normcontrol.md  ALGO-notebook-study.md  ALGO-object-estimate.md  ALGO-pdf-layout.md  ALGO-routing.md  ALGO-smeta-ontology.md  ALGO-smeta.md  ALGO-spec-to-bor.md  ALGO-stesnennost.md  ALGO-table-query.md  ALGO-vl-lora.md  ALGO-workflow-plan.md  API.md  ARCHITECTURE_les_algorithm.md  ARTICLE_CONSTRUCTION_PRICING_BASICS.md  ARTICLE_DETERMINATION_TRAP.md  AUDIT_CORE.md  AUDIT_DETERMINISM.md  AUDIT_RAG_ARCHITECTURE.md  AUDIT_RAG_FUNCTIONAL.md  BASIC_FUNCTIONS_AUTOTEST_PLAN.md  CHAT_PROMPTS.md  CHECKLIST_REVIEW_PD_TASK.md  CODE_MAP.md  DOCS_SESSIONS_AUDIT_REPORT_2026-06-25.md  DOCUMENTATION_PLAYBOOK.md  DOC_REVIEW_GOST_R_21_101_2026_PLAN.md  (+25 more)
examples/: minimal.cad_bim_graph.json
exporters/: README.md  build-exporters-windows.ps1
frontend/: sovushka.html  sovushka_v2_backup.html
golden/: artel_fop_set.json  bim_questions_set.json  clause_subclauses_set.json  domain_fire_hvac_set.json  extract_eval_set.json  model_candidates.json  ntd_golden_set.json  router_eval_set.json  validator_probe_set.json  validator_real_window_seed.json  validator_real_window_set.json
installers/: README.md
intake/: .gitignore  README.md
products/: README.md
proxy/: __init__.py  app.py  config.py  legacy_app.py  security.py
qdrant_visualizer/: README.md  export_data.py  index.html  pca.js  styles.css  visualizer.js
schema/: artel_family_learning_case.schema.json  cad_bim_graph.schema.json  family_action_plan.schema.json  family_geometry.schema.json
scratch/: check_bm25_scores.py  check_chunk_docs.py  inspect_corrupted.py  inspect_db_stats.py  inspect_gkrf_db.py  reindex_books_auto.py  search_server_chunks.py  test_chat_llm_chunks.py  test_chat_query.py  test_dynamic_scaling.py  test_langextract_synthetic.py  test_markitdown.py  test_metadata.py  test_mlx_ocr.py  test_server_room_context.py  test_server_room_query.py  test_synonyms.py
scripts/: extract_dataset_bodies_v13.py  extract_dataset_bodies_v14.py  index_extracted_sidecars_lexical_v16.py  inspect_runtime_datasets_v16.py  sample_extracted_terms_v15.py  smoke_unified_v08.py  (+5 more)
(+819 files in other folders)
